PROJECT(MultiEdvs)

find_package(Qt4 REQUIRED)

INCLUDE_DIRECTORIES(
	${edvstools_SOURCE_DIR}
)

SET(QT_USE_QTOPENGL TRUE)

SET(MultiEdvs_SOURCES
	main.cpp
	WdgtEdvsVisual.cpp
)
SET(MultiEdvs_HEADERS
	WdgtEdvsVisual.h
)
SET(MultiEdvs_FORMS
	WdgtEdvsVisual.ui
)

QT4_WRAP_CPP(MultiEdvs_HEADERS_MOC ${MultiEdvs_HEADERS})
QT4_WRAP_UI(MultiEdvs_FORMS_HEADERS ${MultiEdvs_FORMS})

INCLUDE(${QT_USE_FILE})

ADD_DEFINITIONS(${QT_DEFINITIONS} -DQT_NO_KEYWORDS)

ADD_EXECUTABLE(${PROJECT_NAME}
	${MultiEdvs_SOURCES}
	${MultiEdvs_HEADERS_MOC}
	${MultiEdvs_FORMS_HEADERS}
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	Edvs
	${QT_LIBRARIES}
	boost_program_options
	boost_signals
)

